# Notebook-for-stock

./: CAC40_Stock_Analysis_Presentation.pptx  CAC40_Stock_Analysis_Presentation_NEW.pptx  CAC40_stock_analysis.ipynb  Cryptocurrency_Analysis_Presentation.pptx  Gold_Price_Analysis_Presentation.pptx  NVIDIA_Stock_Analysis_Presentation.pptx  Nike_Stock_Analysis_Presentation.pptx  README.md  Random_Stock_Market_Analysis_Presentation.pptx  Walt_Disney_Stock_Analysis_Presentation.pptx  crypto_stock_analysis.ipynb  gold_stock_analysis.ipynb  main.py  nike_stock_analysis.ipynb  nvidia_stock_analysis.ipynb  pyproject.toml  random_stock_market_analysis.ipynb  walt_disney_stock_analysis.ipynb
datasets/nike stock/: Nike_historical_data.csv
datasets/nvidia_stock/: Nvidia_stock_data.csv
datasets/walt_disney_company stock/: The_Walt_Disney_Company_historical_data.csv
