[project]
name = "usingscala"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "criteo-marketing>=1.0.0",
    "findspark>=2.0.1",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "html5lib>=1.1",
    "ipykernel>=7.0.1",
    "itemadapter>=0.10.0",
    "jupyterhub>=5.4.1",
    "jupyterlab>=4.4.9",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "parsel>=1.9.1",
    "pip>=25.2",
    "python-pptx>=1.0.0",
    "py4j>=0.10.9",
    "pyspark>=3.5.0",
    "requests>=2.32.5",
    "scikit-learn>=1.6.0",
    "scrapy>=2.12.0",
    "scrapy-playwright>=0.0.40",
    "scrapy-user-agents>=0.1.1",
    "seaborn>=0.13.2",
    "selenium>=4.27.0",
    "w3lib>=2.2.1",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
]
